# prompt_optimization_studio

./: .dockerignore  .env.example  .gitignore  APOST_v4_Budgets_and_Cancellation.md  APOST_v4_Documentation.md  APOST_v4_Plan5_Budgets_and_Cancellation.md  Dockerfile  FEASIBILITY_ASSESSMENT.md  FULLSTACK_RUNBOOK.md  PROMPT_OPTIMIZATION_FRAMEWORK_AUDIT.md  PromptOptimizer.jsx  README.md  docker-compose.yml  package.json  run_apost_fullstack.py  start_backend.py
backend/: .env.example  README.md  evaluate_gemini_models.py  evaluate_openai_models.py  pyproject.toml  requirements.txt  test_optimizers_locally.py  working_gemini_models.md  working_openai_models.md
backend/app/: __init__.py  config.py  main.py
backend/sample_usage/: .gitignore  01_health.py  02_gap_analysis.py  03_optimize.py  04_chat.py  README_FRAMEWORK_HARNESS.md  common.py  fixtures_healthcare.py  framework_transparency_harness.py  healthcare_prompt_scenarios.py  pipeline_chat_refinement_check.py  pipeline_gap_analysis_check.py  pipeline_optimize_check.py  run_all.py  run_all_framework_suites.py  run_framework_core_attention_suite.py  run_framework_cot_ensemble_suite.py  run_framework_create_regression_check.py  run_framework_create_suite.py  run_framework_kernel_suite.py  run_framework_opro_suite.py  run_framework_overshoot_undershoot_suite.py  run_framework_progressive_suite.py  run_framework_ral_writer_suite.py  run_framework_reasoning_aware_suite.py  run_framework_sammo_suite.py  run_framework_tcrte_suite.py  run_framework_textgrad_suite.py  run_framework_xml_structured_suite.py  sample_runtime.py  (+2 more)
(+262 files in other folders)
